add architecture tests